// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal basis 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-center-show corn-drawer-center"
    data-testid="body"
  >
    <div
      class="corn-modal"
      data-testid="modal"
    >
      <div
        class="corn-modal-top"
      >
        <div
          class="corn-modal-title"
        >
          弹窗
        </div>
      </div>
      <div
        class="corn-modal-floor-line"
      >
        <div
          class="corn-modal-button cancel"
        >
          取消
        </div>
        <div
          class="corn-modal-button undefined"
        >
          确定
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal button 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-center-show corn-drawer-center"
    data-testid="body"
  >
    <div
      class="corn-modal"
      data-testid="modal"
    >
      <div
        class="corn-modal-top"
      >
        <div
          class="corn-modal-title"
        >
          弹窗
        </div>
        <div
          class="corn-modal-content"
        >
          我是弹窗
        </div>
      </div>
      <div
        class="corn-modal-floor-line"
      >
        <div
          class="corn-modal-button cancel"
        >
          取消
        </div>
        <div
          class="corn-modal-button undefined"
        >
          确定
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal button multi 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-center-show corn-drawer-center"
    data-testid="body"
  >
    <div
      class="corn-modal"
      data-testid="modal"
    >
      <div
        class="corn-modal-top"
      >
        <div
          class="corn-modal-title"
        >
          弹窗
        </div>
        <div
          class="corn-modal-content"
        >
          我是弹窗
        </div>
      </div>
      <div
        class="corn-modal-floor-multi"
      >
        <div
          class="corn-modal-button cancel"
        >
          取消
        </div>
        <div
          class="corn-modal-button undefined"
        >
          自定义样式
        </div>
        <div
          class="corn-modal-button undefined"
        >
          确定
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal children 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-center-show corn-drawer-center"
    data-testid="body"
  >
    <div
      class="corn-modal"
      data-testid="modal"
    >
      <div
        class="corn-modal-top"
      >
        <div
          class="corn-modal-title"
        >
          弹窗
        </div>
        <div
          class="corn-modal-content"
        >
          <div
            class=""
          >
            我是弹窗的爸爸
          </div>
        </div>
      </div>
      <div
        class="corn-modal-floor-line"
      >
        <div
          class="corn-modal-button cancel"
        >
          取消
        </div>
        <div
          class="corn-modal-button undefined"
        >
          确定
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal content 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-center-show corn-drawer-center"
    data-testid="body"
  >
    <div
      class="corn-modal"
      data-testid="modal"
    >
      <div
        class="corn-modal-top"
      >
        <div
          class="corn-modal-title"
        >
          弹窗
        </div>
        <div
          class="corn-modal-content"
        >
          我是弹窗
        </div>
      </div>
      <div
        class="corn-modal-floor-line"
      >
        <div
          class="corn-modal-button cancel"
        >
          取消
        </div>
        <div
          class="corn-modal-button undefined"
        >
          确定
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal not button 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-center-show corn-drawer-center"
    data-testid="body"
  >
    <div
      class="corn-modal"
      data-testid="modal"
    >
      <div
        class="corn-modal-top"
      />
    </div>
  </div>
</div>
`;
